LB-test-manifest.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - image: nginx:latest
    name: foo-app
    resources:
      requests:
        cpu: "50m"
        memory: "64Mi"
      limits:
        cpu: "100m"
        memory: "128Mi"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
  - image: httpd:latest
    name: bar-app
    resources:
      requests:
        cpu: "50m"
        memory: "64Mi"
      limits:
        cpu: "100m"
        memory: "128Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  type: LoadBalancer
  selector:
    app: foo
  ports:
  - port: 5678
    targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  type: LoadBalancer
  selector:
    app: bar
  ports:
  - port: 8765
    targetPort: 80
