httproute-httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: istio
spec:
  hostnames:
  - istio-gateway-istio.istio-gateway
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  rules:
  - matches:
    - istio:
        type: istioPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 80
